corrigido bug do tamanho dos cards ao se exibir informação detalhada, corrigido cores dos cards e contraste dos tipos

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -11,9 +11,11 @@
   flex-wrap: wrap;
   justify-content: center;
 }
+.container {
+  max-height: fit-content;
+}
 
 .card {
-  background-color: #99dd77;
   padding: 0.5rem;
   min-width: 8rem;
   border: none;
